--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
   <!-- 🌠 Background Video -->
   <video id="backgroundVideo" autoplay muted loop playsinline>
-    <source src="diwali.mp4" type="video/mp4">
+    <source src="diwali-compressed.mp4" type="video/mp4">
     <!-- If video fails, image will be shown behind -->
   </video>
 
@@ -221,14 +221,14 @@
 
   <!-- 📜 Credit Box -->
   <div id="creditBox" 
-    style="position: fixed; bottom: 50px; right: 10px; background: rgba(0,0,0,0.85); color: white; padding: 12px; border-radius: 12px; max-width: 270px; font-size: 0.85em; text-align: left; display: none; z-index: 100; box-shadow: 0 0 15px rgba(255,215,0,0.3);">
+    style="position: fixed; bottom: 50px; right: 10px; background: rgba(0,0,0,0.85); color: rgba(255, 255, 255, 0.407); padding: 12px; border-radius: 12px; max-width: 270px; font-size: 0.85em; text-align: left; display: none; z-index: 100; box-shadow: 0 0 15px rgba(255,215,0,0.3);">
     <strong style="color: rgb(158, 156, 147);">Media Credits:</strong><br>
     🎥 Video from <a href="https://pixabay.com/videos/diwali-festival-lamp-indian-light-309626/
     https://www.freepik.com/free-vector/" target="_blank" style="color: rgb(66, 66, 66);">Pixaby</a><br>
     🖼️ Image from <a href="https://www.freepik.com/free-vector/happy-diwali-indian-traditional-festival-celebration-card-design_33148236.htm#fromView=keyword&page=1&position=26&uuid=6aa4b7cb-ad20-4434-af6b-8c90c53b1ff0&query=Diwali" target="_blank" style="color: rgb(88, 84, 84);">Freepik</a>
     <hr style="border: 0; height: 1px; background: rgba(255,255,255,0.2); margin: 8px 0;">
     <strong style="color: gold;">Created by:</strong><br>
-    <span id="creatorName">Ajas Augustin</span><br>
+    <span style="color: white;" id="creatorName">Ajas Augustin</span><br>
     <!-- <div id="socialLinks" style="margin-top: 5px;">
       <a href="https://github.com/yourusername" target="_blank" style="color: gold; text-decoration: none;">🐙 GitHub</a><br>
       <a href="https://instagram.com/yourhandle" target="_blank" style="color: gold; text-decoration: none;">📸 Instagram</a><br>
